--- a/app/globals.css
+++ b/app/globals.css
@@ -1,27 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+body{
+    background-color: #19191B;
+    width: 100%;
+    overflow-x: hidden;
+    position: relative;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+@font-face {
+    font-family: 'Graphik';
+    src: url('..//public//Graphik-Font-Family/GraphikBold.otf');
+    font-weight: 700;
+    font-style: normal;
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+::-webkit-scrollbar{
+    width: 0px;
+    height:0px;
 }
+#text{
+    
+}
+@keyframes typing {
+    from{
+        width : 0
+    }
+}
+@keyframes blink {
+    50%{
+        border-color: transparent;
+    }}
